--- a/app/src/main/res/layout/activity_atur_discount_jasa_lain_.xml
+++ b/app/src/main/res/layout/activity_atur_discount_jasa_lain_.xml
@@ -114,7 +114,7 @@
                     android:layout_weight="6"
                     android:background="@drawable/background_edittext">
 
-                    <com.rkrzmail.srv.MultiSelectionSpinner
+                    <Spinner
                         android:id="@+id/sp_pekerjaan_discJasa"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -145,40 +145,32 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingMedium"
+                android:layout_marginTop="15dp"
                 android:layout_marginBottom="@dimen/paddingMedium"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingStart="@dimen/paddingMedium"
-                android:paddingEnd="@dimen/paddingMedium">
+                android:orientation="horizontal">
 
                 <TextView
-                    android:layout_height="wrap_content"
-                    android:text="TANGGAL EFEKTIVE"
                     android:layout_width="0dp"
                     android:layout_weight="3"
+                    android:layout_height="wrap_content"
+                    android:text="@string/status"
                     android:textColor="@color/grey_900"
-                    android:textStyle="bold"
-                    android:textSize="12sp"/>
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
 
                 <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="34dp"
                     android:layout_weight="6"
-                    android:paddingStart="10dp"
-                    android:paddingTop="2dp"
-                    android:paddingBottom="2dp"
-                    tools:ignore="RtlSymmetry"
                     android:background="@drawable/background_edittext">
 
-                    <TextView
-                        android:id="@+id/tv_tglEffect_discJasa"
+                    <Spinner
+                        android:id="@+id/sp_status"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:drawableStart="@drawable/icon_tanggal"
-                        android:gravity="center"
                         android:textAlignment="center"
-                        android:textColor="@color/grey_900"/>
+                        android:gravity="center"/>
 
                 </RelativeLayout>
 
