--- a/app/src/main/res/layout/activity_atur_discount_part_.xml
+++ b/app/src/main/res/layout/activity_atur_discount_part_.xml
@@ -129,7 +129,7 @@
                     android:layout_weight="6"
                     android:background="@drawable/background_edittext">
 
-                    <com.rkrzmail.srv.MultiSelectionSpinner
+                    <Spinner
                         android:id="@+id/sp_pekerjaan_discPart"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -186,18 +186,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/paddingMedium"
+                android:layout_marginTop="15dp"
                 android:layout_marginBottom="@dimen/paddingMedium"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingStart="@dimen/paddingMedium"
-                android:paddingEnd="@dimen/paddingMedium">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
                     android:layout_weight="3"
-                    android:text="TANGGAL EFEKTIVE"
+                    android:layout_height="wrap_content"
+                    android:text="@string/status"
                     android:textColor="@color/grey_900"
                     android:textSize="12sp"
                     android:textStyle="bold" />
@@ -208,17 +206,13 @@
                     android:layout_weight="6"
                     android:background="@drawable/background_edittext">
 
-                    <TextView
-                        android:id="@+id/tv_tglEffect_discPart"
+                    <Spinner
+                        android:id="@+id/sp_status"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="10dp"
-                        android:drawableStart="@drawable/icon_tanggal"
-                        android:gravity="center"
-                        android:textStyle="bold" />
+                        android:textAlignment="center" />
 
                 </RelativeLayout>
-
 
             </LinearLayout>
 
