--- a/app/src/main/res/layout/activity_atur_spot_discount.xml
+++ b/app/src/main/res/layout/activity_atur_spot_discount.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:descendantFocusability="beforeDescendants"
-    android:focusableInTouchMode="true" >
+    android:focusableInTouchMode="true">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,27 +16,56 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="10dp">
+            android:padding="10dp">
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardView_namaLayanan"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="2dp"
+                app:cardPreventCornerOverlap="true"
+                app:cardUseCompatPadding="true">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:padding="@dimen/paddingSemiLarge">
+
+                    <TextView
+                        android:id="@+id/tv_nama_pelanggan"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:padding="5dp"
+                        android:gravity="center"
+                        android:text="@string/nama_pelanggan_uppercase"
+                        android:textColor="@color/grey_900"
+                        android:textStyle="bold" />
+
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
 
             <android.support.design.widget.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:helperTextEnabled="true"
+                android:layout_marginTop="5dp"
                 app:helperText="Disable"
+                app:helperTextEnabled="true"
                 app:helperTextTextAppearance="@style/TextAppearance.Design.HelperText.">
 
-
                 <EditText
-                    android:id="@+id/et_noPonsel_disc"
+                    android:id="@+id/et_total_biaya"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:enabled="false"
-                    android:hint="NO PONSEL"
-                    android:textSize="14sp"/>
-
+                    android:hint="@string/total_biaya"
+                    android:textSize="14sp"
+                    tools:ignore="Autofill,TextFields" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -43,48 +73,9 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:helperTextEnabled="true"
                 android:layout_marginTop="5dp"
                 app:helperText="Disable"
-                app:helperTextTextAppearance="@style/TextAppearance.Design.HelperText.">
-
-
-                <EditText
-                    android:id="@+id/et_namaPelanggan_disc"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:hint="NAMA PELANGGAN"
-                    android:textSize="14sp" />
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 app:helperTextEnabled="true"
-                android:layout_marginTop="5dp"
-                app:helperText="Disable"
-                app:helperTextTextAppearance="@style/TextAppearance.Design.HelperText.">
-
-                <EditText
-                    android:id="@+id/et_transaksi_disc"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:hint="TRANSAKSI"
-                    android:textSize="14sp" />
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:helperTextEnabled="true"
-                app:helperText="Disable"
-                android:layout_marginTop="5dp"
                 app:helperTextTextAppearance="@style/TextAppearance.Design.HelperText.">
 
 
@@ -93,8 +84,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:enabled="false"
-                    android:hint="DISCOUNT LAIN"
-                    android:textSize="14sp"/>
+                    android:hint="@string/discount_lain"
+                    android:textSize="14sp"
+                    tools:ignore="Autofill,TextFields" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -102,9 +94,9 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:helperTextEnabled="true"
-                app:helperText="Disable"
                 android:layout_marginTop="5dp"
+                app:helperText="Disable"
+                app:helperTextEnabled="true"
                 app:helperTextTextAppearance="@style/TextAppearance.Design.HelperText.">
 
 
@@ -113,8 +105,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:enabled="false"
-                    android:hint="NET TRANSAKSI"
-                    android:textSize="14sp"/>
+                    android:hint="@string/net_transaksi"
+                    android:textSize="14sp"
+                    tools:ignore="Autofill,TextFields" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -130,8 +123,9 @@
                     android:layout_height="wrap_content"
                     android:hint="SPOT DISCOUNT"
                     android:inputType="numberDecimal"
+                    android:maxLines="1"
                     android:textSize="14sp"
-                    android:maxLines="1" />
+                    tools:ignore="Autofill" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -139,9 +133,9 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:helperTextEnabled="true"
                 android:layout_marginTop="5dp"
                 app:helperText="Disable"
+                app:helperTextEnabled="true"
                 app:helperTextTextAppearance="@style/TextAppearance.Design.HelperText.">
 
 
@@ -150,8 +144,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:enabled="false"
-                    android:hint="TOTAL TRANSAKSI"
-                    android:textSize="14sp"/>
+                    android:hint="@string/total_transaksi"
+                    android:textSize="14sp"
+                    tools:ignore="Autofill,TextFields" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -162,7 +157,7 @@
                 android:layout_gravity="end"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/btn_rounded_accent"
-                android:text="SIMPAN"
+                android:text="@string/simpan_uppercase"
                 android:textColor="@android:color/white" />
 
         </LinearLayout>
@@ -179,7 +174,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
 
