--- a/app/src/main/res/layout/activity_jasa_external.xml
+++ b/app/src/main/res/layout/activity_jasa_external.xml
@@ -16,35 +16,31 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="5dp">
+            android:padding="@dimen/paddingMedium">
 
             <LinearLayout
                 android:id="@+id/ly_waktu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginRight="10dp"
                 android:orientation="horizontal">
 
                 <TextView
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:layout_width="0dp"
-                    android:layout_weight="3"
-                    android:textColor="@color/grey_900"
-                    android:textStyle="bold"
-                    android:textSize="12sp"
+                    android:layout_gravity="center"
                     android:text="WAKTU KERJA"
-                    android:layout_gravity="center"/>
+                    android:textColor="@color/grey_900"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
 
                 <ImageButton
                     android:id="@+id/btn_img_waktu_kerja"
-                    android:layout_width="wrap_content"
+                    android:layout_width="70dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:tint="@color/grey_900"
-                    android:layout_gravity="center"
-                    android:layout_weight="2"
                     app:srcCompat="@drawable/icon_stopwatch" />
 
                 <android.support.design.widget.TextInputLayout
@@ -60,6 +56,7 @@
                         android:layout_height="wrap_content"
                         android:enabled="false"
                         android:hint="HH:JJ:MM"
+                        android:text="@string/_00_00_00"
                         android:textSize="14sp" />
 
                 </android.support.design.widget.TextInputLayout>
@@ -76,6 +73,69 @@
                         android:layout_height="wrap_content"
                         android:enabled="false"
                         android:hint="@string/hh_jj_mm"
+                        android:text="@string/_00_00_00"
+                        android:textSize="14sp" />
+
+                </android.support.design.widget.TextInputLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ly_waktu_inspeksi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_height="wrap_content"
+                    android:layout_width="100dp"
+                    android:textColor="@color/grey_900"
+                    android:textStyle="bold"
+                    android:textSize="12sp"
+                    android:text="WAKTU INSPEKSI"
+                    android:layout_gravity="center"/>
+
+                <ImageButton
+                    android:id="@+id/btn_img_waktu_inspeksi"
+                    android:layout_width="70dp"
+                    android:layout_height="wrap_content"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:tint="@color/grey_900"
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/icon_stopwatch" />
+
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_weight="1">
+
+                    <EditText
+                        android:id="@+id/et_waktu_set_inspeksi"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:enabled="false"
+                        android:hint="HH:JJ:MM"
+                        android:text="@string/_00_00_00"
+                        android:textSize="14sp" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <EditText
+                        android:id="@+id/et_waktu_default_inspeksi"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:enabled="false"
+                        android:hint="@string/hh_jj_mm"
+                        android:text="@string/_00_00_00"
                         android:textSize="14sp" />
 
                 </android.support.design.widget.TextInputLayout>
@@ -90,9 +150,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
-                    android:layout_marginRight="10dp"
                     android:hint="BIAYA JASA">
 
                     <EditText
