--- a/app/src/main/res/layout/activity_jumlah_part_tugas_part.xml
+++ b/app/src/main/res/layout/activity_jumlah_part_tugas_part.xml
@@ -80,6 +80,7 @@
                 android:layout_marginTop="@dimen/paddingXSmall">
 
                 <android.support.design.widget.TextInputLayout
+                    android:id="@+id/tl_jumlah_request"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
