--- a/app/src/main/res/layout/activity_status_part_kosong.xml
+++ b/app/src/main/res/layout/activity_status_part_kosong.xml
@@ -175,7 +175,7 @@
                     android:background="@drawable/background_edittext">
 
                     <TextView
-                        android:id="@+id/tv_tanggal"
+                        android:id="@+id/tv_estimasi"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:drawableLeft="@drawable/icon_tanggal"
