--- a/app/src/main/res/layout/activity_status_tugas_part.xml
+++ b/app/src/main/res/layout/activity_status_tugas_part.xml
@@ -132,14 +132,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp" />
 
-            <Button
-                android:id="@+id/btn_simpan_statusTp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:background="@drawable/btn_rounded_accent"
-                android:text="@string/simpan_uppercase"
-                android:textColor="@android:color/white" />
+            <include layout="@layout/layout_btn_simpan_hapus"/>
 
         </LinearLayout>
 
