--- a/app/src/main/res/layout/activity_checkin4_.xml
+++ b/app/src/main/res/layout/activity_checkin4_.xml
@@ -182,7 +182,6 @@
                         android:checked="true"
                         android:text="BUANG PART BEKAS" />
 
-
                 </LinearLayout>
 
                 <CheckBox
@@ -191,8 +190,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:text="KONFIRMASI PENAMBAHAN"
-                    android:checked="true"
-                    android:enabled="false"/>
+                    android:checked="true" />
 
                 <android.support.design.widget.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
