--- a/app/src/main/res/layout/activity_jumlah_harga_part_.xml
+++ b/app/src/main/res/layout/activity_jumlah_harga_part_.xml
@@ -341,7 +341,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:enabled="false"
-                        android:inputType="text"
+                        android:inputType="number"
                         android:textSize="14sp"
                         tools:ignore="Autofill,LabelFor" />
 
