--- a/app/src/main/res/layout/activity_main_tab_tugas_part.xml
+++ b/app/src/main/res/layout/activity_main_tab_tugas_part.xml
@@ -37,7 +37,8 @@
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
                 app:tabSelectedTextColor="@android:color/white"
-                app:tabTextColor="@android:color/black" />
+                app:tabTextColor="@android:color/black"
+                style="@style/TabLayoutTextSize"/>
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/vp_tugas_part"
