--- a/app/src/main/res/layout/item_jual_part_usaha.xml
+++ b/app/src/main/res/layout/item_jual_part_usaha.xml
@@ -14,7 +14,6 @@
     app:cardElevation="2dp"
     app:cardCornerRadius="10dp">
 
-
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -29,27 +28,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tanggal"
-                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
-                android:layout_gravity="start"/>
-
-            <TextView
-                android:id="@+id/tv_userJual_jualPart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="User Jual"
-                android:layout_gravity="end"
                 android:textSize="12sp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:layout_gravity="start"/>
 
         </TableRow>
 
         <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
             <TextView
-                android:id="@+id/tv_nama_namaUsaha_jualPart"
+                android:id="@+id/tv_namaUsaha_jualPart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nama / Nama Usaha"
+                android:text="Nama Usaha"
                 android:textSize="12sp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_gravity="start"/>
@@ -71,7 +62,7 @@
                 android:id="@+id/tv_harga_jualPart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Harga"
+                android:text="Total Harga"
                 android:layout_gravity="end"
                 android:textSize="12sp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
@@ -84,7 +75,7 @@
                 android:id="@+id/tv_disc_jualPart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Discount"
+                android:text="Total Discount"
                 android:textSize="12sp"
                 android:layout_gravity="start"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
@@ -93,7 +84,7 @@
                 android:id="@+id/tv_total_jualPart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total"
+                android:text="Total Net"
                 android:layout_gravity="end"
                 android:textSize="12sp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
@@ -103,7 +94,7 @@
         <TableRow android:layout_marginTop="@dimen/spacing_medium">
 
             <TextView
-                android:id="@+id/tv_status_jualPart"
+                android:id="@+id/tv_status_usaha"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Status"
@@ -112,10 +103,10 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
 
             <TextView
-                android:id="@+id/tv_userUpdate_jualPart"
+                android:id="@+id/tv_user_usaha"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="User Update"
+                android:text="User"
                 android:layout_gravity="end"
                 android:textSize="12sp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
