--- a/app/src/main/res/layout/item_total_jual_part.xml
+++ b/app/src/main/res/layout/item_total_jual_part.xml
@@ -79,8 +79,9 @@
                     android:id="@+id/tv_jumlah_jualPart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="start"
+                    android:layout_gravity="end"
                     android:text="Jumlah"
+                    android:layout_marginEnd="@dimen/paddingMedium"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/grey_80"
                     android:textSize="12sp" />
@@ -103,8 +104,9 @@
                     android:id="@+id/tv_total_jualPart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="start"
+                    android:layout_gravity="end"
                     android:text="Total"
+                    android:layout_marginEnd="10dp"
                     android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                     android:textColor="@color/grey_80"
                     android:textSize="12sp" />
