--- a/app/src/main/res/layout/mycode.xml
+++ b/app/src/main/res/layout/mycode.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
     <android.support.v4.widget.SwipeRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:ignore="RedundantNamespace">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,6 +36,7 @@
                     android:layout_height="300dp"
                     android:layout_centerInParent="true"
                     android:scaleType="centerCrop" />
+
             </RelativeLayout>
 
             <View
