--- a/app/src/main/res/layout/mycode_inf_user.xml
+++ b/app/src/main/res/layout/mycode_inf_user.xml
@@ -1,8 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardView_namaLayanan"
+
+        android:paddingLeft="@dimen/paddingMedium"
+        android:paddingRight="@dimen/paddingMedium"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="2dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,21 +27,31 @@
             android:id="@+id/icon"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:src="@drawable/noimage" />
+            android:src="@drawable/noimage"
+            android:layout_gravity="center"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="@dimen/paddingSemiLarge"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txtName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
-                android:textColor="@color/amber_100"
-                android:textSize="15sp" />
+                android:text="Nama"
+                android:textColor="@color/grey_900"
+                android:textSize="12sp" />
+
+            <TextView
+                android:id="@+id/tv_posisi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Posisi"
+                android:textColor="@color/grey_900"
+                android:textSize="12sp"
+                android:layout_marginTop="15dp"/>
 
             <TextView
                 android:id="@+id/txtEmail"
@@ -37,7 +59,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:text="Email"
-                android:textSize="14sp" />
+                android:textSize="12sp"
+                android:textColor="@color/grey_900"/>
 
         </LinearLayout>
 
@@ -61,5 +84,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="@android:color/darker_gray" />
+
+    </android.support.v7.widget.CardView>
 
 </FrameLayout>
